[gd_scene load_steps=4 format=3 uid="uid://ujk2qdknxt5a"]

[ext_resource type="Script" uid="uid://1cxusq4txntr" path="res://Pause Menu/pause_menu.gd" id="1_0g3m2"]
[ext_resource type="Texture2D" uid="uid://b2mdwv1ojlear" path="res://Pause Menu/Assets/pause_menu_book_left.jpg" id="2_4x5p1"]
[ext_resource type="Texture2D" uid="uid://babaeu3ciyu7h" path="res://Pause Menu/Assets/pause_menu_book_right.jpg" id="3_iss3t"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 100
script = ExtResource("1_0g3m2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Menu Options" type="NinePatchRect" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_4x5p1")
patch_margin_left = 100
patch_margin_top = 40
patch_margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Menu Options"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Menu Options/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 140
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 30

[node name="Continue" type="Button" parent="HBoxContainer/Menu Options/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Continue"

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/Menu Options/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 140
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 30

[node name="Save" type="Button" parent="HBoxContainer/Menu Options/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 3
text = "Save"

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer/Menu Options/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 140
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 30

[node name="Settings" type="Button" parent="HBoxContainer/Menu Options/VBoxContainer/MarginContainer3"]
layout_mode = 2
size_flags_vertical = 3
text = "Settings"

[node name="MarginContainer4" type="MarginContainer" parent="HBoxContainer/Menu Options/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 140
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 30

[node name="Achievements" type="Button" parent="HBoxContainer/Menu Options/VBoxContainer/MarginContainer4"]
layout_mode = 2
size_flags_vertical = 3
text = "Achievements"

[node name="MarginContainer5" type="MarginContainer" parent="HBoxContainer/Menu Options/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 140
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 30

[node name="MainMenu" type="Button" parent="HBoxContainer/Menu Options/VBoxContainer/MarginContainer5"]
layout_mode = 2
size_flags_vertical = 3
text = "Main Menu"

[node name="Objectives" type="NinePatchRect" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_iss3t")
patch_margin_top = 40
patch_margin_right = 30
patch_margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Objectives"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Objectives/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 30

[node name="Objectives" type="VBoxContainer" parent="HBoxContainer/Objectives/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/Objectives/VBoxContainer/MarginContainer/Objectives"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Objectives/VBoxContainer/MarginContainer/Objectives/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Objectives"

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/Objectives/VBoxContainer/MarginContainer/Objectives"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.54099, 0.54099, 0.54099, 1)

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/Objectives/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 30

[node name="Items" type="VBoxContainer" parent="HBoxContainer/Objectives/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/Objectives/VBoxContainer/MarginContainer2/Items"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Objectives/VBoxContainer/MarginContainer2/Items/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Items"

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/Objectives/VBoxContainer/MarginContainer2/Items"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.54099, 0.54099, 0.54099, 1)

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer/Objectives/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 30

[node name="Hints" type="VBoxContainer" parent="HBoxContainer/Objectives/VBoxContainer/MarginContainer3"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/Objectives/VBoxContainer/MarginContainer3/Hints"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Objectives/VBoxContainer/MarginContainer3/Hints/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Hints"

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/Objectives/VBoxContainer/MarginContainer3/Hints"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.54099, 0.54099, 0.54099, 1)

[connection signal="pressed" from="HBoxContainer/Menu Options/VBoxContainer/MarginContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="HBoxContainer/Menu Options/VBoxContainer/MarginContainer2/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="HBoxContainer/Menu Options/VBoxContainer/MarginContainer3/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="HBoxContainer/Menu Options/VBoxContainer/MarginContainer4/Achievements" to="." method="_on_achievements_pressed"]
[connection signal="pressed" from="HBoxContainer/Menu Options/VBoxContainer/MarginContainer5/MainMenu" to="." method="_on_main_menu_pressed"]
